--- a/css/global/boilerplate.css
+++ b/css/global/boilerplate.css
@@ -21,8 +21,10 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
